Making Fronted great again continued... the frontend is finally complete

--- a/front-end/app/views/index.scala.html
+++ b/front-end/app/views/index.scala.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 </head>
 <body id="body" ng-controller="mainController" ng-cloak>
-  <md-toolbar class= "row" flex = "100">
-    <div class="md-toolbar-tools" class= "row" flex = "100">
+  <md-toolbar class= "row" flex = "100" ng-cloak>
+    <div class="md-toolbar-tools" class= "row" flex = "100" ng-cloak>
       <div flex = "20" hide show-gt-md flex>
         <a href="#/items">
           <img id = "appLogo" src="img/app-icon.png" height = "30px" width = "30px" />
