--- a/front-end/public/partials/us.html
+++ b/front-end/public/partials/us.html
@@ -1,70 +1,122 @@
-<div layout = "row" layout-wrap flex-offset = "10" flex-offset-sm = "0">
-    <md-card flex = "30" flex-sm = "100" layout = "column">
-        <md-card-title layout-align = "center center" flex = "20">
+<div layout = "row" layout-wrap flex-offset = "15" flex-offset-sm = "0">
+    <md-card id = "usCard" flex = "40" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "10">
             <md-card-title-text id = "cardTitleText" layout-align = "center center">
                 <center><span class="md-headline title">AMIR</span></center>
             </md-card-title-text>
         </md-card-title>
-        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+        <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
             </div>
-            <div flex = "100">
-                <span class="md-title"> MONOLITH BREAKER</span>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "60" style = "width:100%">
+                    <span class = "md-subhead title">Media Technology</span>
+                </div>
+            </div>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "80">
+                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                </div>
             </div>
         </md-card-content>
-        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        <md-card-actions id = "cardFooter" layout = "row" flex = "10">
         </md-card-actions>
     </md-card>
-    <md-card flex = "30" flex-sm = "100" layout = "column">
-        <md-card-title layout-align = "center center" flex = "20">
+    <md-card id = "usCard" flex = "40" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "10">
             <md-card-title-text id = "cardTitleText" layout-align = "center center">
                 <center><span class="md-headline title">ARBER</span></center>
             </md-card-title-text>
         </md-card-title>
-        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+        <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
             </div>
-            <div flex = "100">
-                <span class="md-title"> MONOLITH BREAKER</span>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "60" style = "width:100%">
+                    <span class = "md-subhead title">Media Technology</span>
+                </div>
+            </div>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "80">
+                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                </div>
             </div>
         </md-card-content>
-        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        <md-card-actions id = "cardFooter" layout = "row" flex = "10">
         </md-card-actions>
     </md-card>
-        <md-card flex = "30" flex-sm = "100" layout = "column">
-        <md-card-title layout-align = "center center" flex = "20">
+    <md-card id = "usCard" flex = "40" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "10">
             <md-card-title-text id = "cardTitleText" layout-align = "center center">
                 <center><span class="md-headline title">KUSHTRIM</span></center>
             </md-card-title-text>
         </md-card-title>
-        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+        <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
             </div>
-            <div flex = "100">
-                <span class="md-title"> MONOLITH BREAKER</span>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "60" style = "width:100%">
+                    <span class = "md-subhead title">Media Technology</span>
+                </div>
+            </div>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "80">
+                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                </div>
             </div>
         </md-card-content>
-        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        <md-card-actions id = "cardFooter" layout = "row" flex = "10">
         </md-card-actions>
     </md-card>
-        <md-card flex = "30" flex-sm = "100" layout = "column">
-        <md-card-title layout-align = "center center" flex = "20">
+    <md-card id = "usCard" flex = "40" flex-sm = "100" layout = "column">
+        <md-card-title layout-align = "center center" flex = "10">
             <md-card-title-text id = "cardTitleText" layout-align = "center center">
                 <center><span class="md-headline title">MUHAMMAD RAUF</span></center>
             </md-card-title-text>
         </md-card-title>
-        <md-card-content layout = "column" layout-align = "center center" flex = "60">
+        <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <!--<img id = "{{item.id}}" src = "" heignt = "400px" width = "150px" />-->
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
             </div>
-            <div flex = "100">
-                <span class="md-title"> MONOLITH BREAKER</span>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "60" style = "width:100%">
+                    <span class = "md-subhead title">Media Technology</span>
+                </div>
+            </div>
+            <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
+                <div flex = "10" flex-offset = "30" style = "width:100%">
+                    <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
+                </div>
+                <div flex = "80">
+                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                </div>
             </div>
         </md-card-content>
-        <md-card-actions id = "cardFooter" layout = "row" flex = "20">
+        <md-card-actions id = "cardFooter" layout = "row" flex = "10">
         </md-card-actions>
     </md-card>
 </div>
