--- a/front-end/public/views/account-item-details.html
+++ b/front-end/public/views/account-item-details.html
@@ -9,7 +9,7 @@
             </div>
         </div>
     </md-toolbar>
-    <div flex = "100" layout = "row" layout-margin>
+    <div id = "item_details_container" flex = "100" layout = "row" layout-margin>
         <div id = "itemImgDiv" layout = "column" flex = "50" layout-margin>
             <div ng-show = "showItem == true ">
                 <img id = "single_item_{{item.id}}" src = "" height = "200" width = "100%" />
