--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -7,6 +7,8 @@
         </md-tab>
         <md-tab ng-click = "changeAccountView('create')"><span class="tabItemLabel">Create Item</span>
         </md-tab>
+        <md-tab ng-click = "changeAccountView('interested')"><span class="tabItemLabel">Items Interested On</span>
+        </md-tab>
     </md-tabs>
 </div>
 <div id = "accountWrapper" ng-show = "isLoggedIn">
@@ -18,6 +20,10 @@
         <md-input-container class = "md-block" flex-gt-xs>
             <label>Your Password</label>
             <input ng-model = "password" disabled>
+        </md-input-container>
+        <md-input-container class = "md-block" flex-gt-xs>
+            <label>Your average rating</label>
+            <input ng-model = "rating" disabled>
         </md-input-container>
     </div>
     <div ng-show = "showAccountPart == 'items'" layout = "column" flex = "100" flex-offset = "10">
@@ -66,7 +72,8 @@
                     <label>Item Price</label>
                     <input ng-model = "itemPrice" required>
                 </md-input-container>
-                <input class = "md-raised md-accent" type="file" required></input>
+                <span class = "md-body-1">Choose image</span><br />
+                <input class = "md-raised md-accent" type = "file" required />
             </div>
             <div layout = "column" flex = "100" layout-align = "end end">
                 <md-button class="md-fab" aria-label="Add Item" ng-click = "uploadItem()"
@@ -74,6 +81,35 @@
                     <md-icon md-svg-icon="img/send.svg"></md-icon>
                 </md-button>
             </div>
+    </div>
+    <div ng-show = "showAccountPart == 'interested'" layout = "column" flex = "100" flex-offset = "10">
+        <div layout = "row" layout-wrap flex-offset-sm = "0" ng-if = "itemsIamInterestedOn.length > 0">
+            <md-card id = "itemCard" ng-repeat="item in itemsIamInterestedOn" flex = "30" flex-sm = "100" layout = "column">
+                <md-card-title-text layout-align = "center center" flex = "10">
+                    <center><span class="md-headline title">{{item.name}}</span></center>
+                </md-card-title-text>
+                <md-card-content layout = "column" flex = "75">
+                    <div flex = "80" id = "imgDiv" layout = "row">
+                        <div layout-align = "center center">
+                            <img id = "item_interested_{{item.id}}" src = ""  height = "210px" width="100%" />
+                        </div>
+                    </div>
+                    <div flex = "20" layout = "row" >
+                        <div layout-align = "center center" flex = "100">
+                            <center><span class="md-headline title"> {{item.price | currency: "SEK" : 0}}</span></center>
+                        </div>
+                    </div>
+                </md-card-content>
+                <md-card-actions flex = "15" layout = "row" layout-align = "center center">
+                    <div layout-align = "center center" flex = "100" layout = "row">
+                        <md-button flex = "100" class = "md-primary md-raised" ng-click = "seeItemDetails(item.id)">View Details</md-button>
+                    </div>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div flex = "100" ng-if = "itemsIamInterestedOn.length == 0">
+            <center><span class = "md-display-2 title">YOU HAVEN'T BEEN INTERESTED IN ANY ITEM YET!</span></center>
+        </div>
     </div>
 </div>
 <div id = "accountWrapperNotLoggedIn" ng-show = "!isLoggedIn" layout-wrap layout = "column">
