--- a/front-end/public/views/item-details.html
+++ b/front-end/public/views/item-details.html
@@ -1,4 +1,4 @@
-<md-dialog id = "itemDetails" aria-label = "Item Details" flex = "60" layout = "column">
+<md-dialog id = "itemDetails" aria-label = "Item Details" flex = "60" layout = "column" ng-cloak>
     <md-toolbar class= "row" flex = "100">
         <div class="md-toolbar-tools" class= "row" flex = "100">
             <div flex = "70"><span>Details of {{item.name}}</span></div>
@@ -9,34 +9,56 @@
             </div>
         </div>
     </md-toolbar>
-    <div flex = "100" layout = "row" layout-margin>
-        <div id = "itemImgDiv" layout = "column" flex = "50" layout-margin ng-show = "showItem == true">
-            <img id = "single_item_{{item.id}}" src = "" height = "200" width = "100%"/>
-            <br />
-            <div flex-offset = "5"><span class = "md-subhead title">Seller : {{item.userId}}</span></div>
-        </div>
-        <div id = "itemImgDiv" flex = "50" layout-margin ng-show = "showItem == false" layout-align = "center center">
-            <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-        </div>
-        <div id = "itemInfoDiv" layout = "column" flex = "50" layout-margin ng-show = "!displaySendMessage">
-            <div><span class = "md-title title">Price : {{item.price | currency: "SEK" : 0}}</span></div>
-            <div><span id = "single_item_rating_{{item.id}}" class="md-title">.....</span></div>
-            <br /><br />
-            <span class = "md-subhead title">DESCRIPTION:</span>
-            <hr />
-            <span class = "md-subhead">{{item.description}}</span>
-            <br /><br /><hr />
-            <div ng-if = "item.isSold == '-1' || item.isSold == '' " flex = "100">
-                <md-button id = "buyButton" class="md-raised md-accent"  ng-if = "!isMyItem" ng-click = "iWantToBuy()"  
-                    ng-disabled = "!canBuy" > Buy </md-button>
+    <div id = "item_details_container" flex = "100" layout = "column">
+        <div layout = "row" flex = "100">
+            <div id = "item_detail_left" flex = "50" layout = "column" layout-align = "center center">
+                <div flex = "80" id = "imgDiv" layout = "row" layout-align = "center center">
+                    <div layout-align = "center center" ng-show = "showItem == true">
+                        <img id = "single_item_{{item.id}}" src = ""  height = "210px" width="100%" />
+                    </div>
+                    <div layout-align = "center center" ng-show = "showItem == false">
+                        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+                    </div>
+                </div>
+                <div flex = "20" layout = "row">
+                    <div flex = "100" layout = "row" layout-align = "space-between">
+                        <span class="md-body-2 title">
+                            Seller : {{item.userId}} &nbsp&nbsp
+                            <span id = "single_item_rating_{{item.id}}" class="md-body-2">.....</span>
+                        </span>
+                    </div>
+                </div>
             </div>
-            <div ng-if = "item.isSold != '-1' && item.isSold !=''">
-                <md-button class="md-raised md-accent"  ng-if = "item.isSold != '-1'" ng-disabled = "1 == 1"> SOLD </md-button>
+            <div id = "item_detail_right" flex = "10" layout = "column" layout-align = "center start"></div>
+            <div id = "item_detail_right" flex = "40" layout = "column" layout-align = "center start">
+                <div flex = "10" layout = "row" ng-show = "!displaySendMessage">
+                </div>
+                <div flex = "40" layout = "row" ng-show = "!displaySendMessage">
+                    <div layout-align = "center start" flex = "100">
+                        <div><span class = "md-subhead title">Price : {{item.price | currency: "SEK" : 0}}</span></div>
+                        <span class = "md-subhead title">Description:</span>
+                        <span class = "md-subhead">{{item.description}}</span>
+                    </div>
+                </div>
+                <div id = "itemInfoDiv" layout = "column" flex = "40" layout-margin ng-show = "!displaySendMessage">
+                    <div ng-if = "item.isSold == '-1' || item.isSold == '' " flex = "100">
+                        <md-button id = "buyButton" class="md-raised md-accent"  ng-if = "!isMyItem" ng-click = "iWantToBuy()"  
+                            ng-disabled = "!canBuy" > Buy </md-button>
+                    </div>
+                    <div ng-if = "item.isSold != '-1' && item.isSold !=''" flex = "100" layout-align = "center center">
+                        <span class="md-display-1 title"  ng-if = "item.isSold != '-1'" ng-disabled = "1 == 1"> ITEM SOLD </span>
+                    </div>
+                </div>
+                <div id = "itemInfoDiv" layout = "column" flex = "100" layout-margin ng-show = "displaySendMessage" layout-align = "center center">
+                    <div flex = "10"></div>
+                    <div flex = "50" layout-align = "center center">
+                        <textarea ng-model = "message" id = "message" cols = "32" rows = "10" wrap = "soft" placeholder = "Write your message here. Lagom loves you"></textarea>
+                    </div>
+                    <div flex = "30" layout-align = "center center">
+                        <md-button class="md-raised md-accent" ng-click = "sendMessage()"  ng-disabled = "!canBuy"> Send Message </md-button>
+                    </div>
+                <div>
             </div>
         </div>
-        <div id = "itemInfoDiv" layout = "column" flex = "50" layout-margin ng-show = "displaySendMessage">
-            <textarea ng-model = "message" id = "message" cols = "35" rows = "10" wrap = "soft" placeholder = "Write your message here. Lagom loves you"></textarea>
-            <md-button class="md-raised md-accent" ng-click = "sendMessage()"  ng-disabled = "!canBuy"> Send Message </md-button>
-        <div>
     </div>
 </md-dialog>
