Monolith breakers tab ..

--- a/front-end/public/partials/us.html
+++ b/front-end/public/partials/us.html
@@ -7,14 +7,14 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/amir.jpg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
                     <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
                 </div>
                 <div flex = "60" style = "width:100%">
-                    <span class = "md-subhead title">Media Technology</span>
+                    <span class = "md-subhead title">Software Technology</span>
                 </div>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
@@ -22,7 +22,7 @@
                     <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
                 </div>
                 <div flex = "80">
-                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                    <span class = "md-subhead title">sm222cf@student.lnu.se</span>
                 </div>
             </div>
         </md-card-content>
@@ -37,14 +37,14 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/arber.jpg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
                     <img ng-src = "img/department.svg" style = "fill:white" class = "md-avatar" />
                 </div>
                 <div flex = "60" style = "width:100%">
-                    <span class = "md-subhead title">Media Technology</span>
+                    <span class = "md-subhead title">Software Technology</span>
                 </div>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
@@ -52,7 +52,7 @@
                     <img ng-src = "img/email.svg" style = "fill:white" class = "md-avatar" />
                 </div>
                 <div flex = "80">
-                    <span class = "md-subhead title">ka222jm@student.lnu.se</span>
+                    <span class = "md-subhead title">ac222mz@student.lnu.se</span>
                 </div>
             </div>
         </md-card-content>
@@ -67,7 +67,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
@@ -97,7 +97,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "400px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
