--- a/front-end/public/partials/us.html
+++ b/front-end/public/partials/us.html
@@ -7,7 +7,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/amir.jpg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/person.png" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
@@ -37,7 +37,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/arber.jpg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/person.png" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
@@ -67,7 +67,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/person.png" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
@@ -97,7 +97,7 @@
         </md-card-title>
         <md-card-content layout = "column" layout-align = "center center" flex = "80">
             <div flex = "100" flex = "100"> 
-                <img id = "personal_image" src = "img/cvPicture.jpeg" heignt = "150px" width = "150px" style="borders:2px solid black"/>
+                <img id = "personal_image" src = "img/person.png" heignt = "150px" width = "150px" style="borders:2px solid black"/>
             </div>
             <div flex = "100" layout = "row" layout-align = "spaces-between" style = "width:100%">
                 <div flex = "10" flex-offset = "30" style = "width:100%">
