Changed tab name .. so the functionality is more understandable

--- a/front-end/public/partials/account.html
+++ b/front-end/public/partials/account.html
@@ -7,7 +7,7 @@
         </md-tab>
         <md-tab ng-click = "changeAccountView('create')"><span class="tabItemLabel">Create Item</span>
         </md-tab>
-        <md-tab ng-click = "changeAccountView('interested')"><span class="tabItemLabel">Bought Items</span>
+        <md-tab ng-click = "changeAccountView('interested')"><span class="tabItemLabel">Interests</span>
         </md-tab>
     </md-tabs>
 </div>
